--- a/index.html
+++ b/index.html
@@ -1,74 +1,104 @@
-
+<!-- Full updated code implementing rounded segments, fixed-line layout, no clipping -->
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Odliczanie 7‑segment LED</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Event</title>
 <style>
-body{
-    background:#000;
-    height:100vh;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    overflow:hidden;
-    font-family:monospace;
+body {
+  background: #000;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  overflow: hidden;
 }
-.display-wrapper{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    width:100%;
-    height:100%;
-}
-.led-display{
-    display:flex;
-    align-items:center;
-    background:#0a0a0a;
-    padding:25px 30px;
-    border-radius:12px;
-    border:2px solid #222;
-    box-shadow:0 0 40px rgba(255,0,0,0.6);
-}
-.digit{
-    position:relative;
-    width:40px;
-    height:70px;
-    margin:0 6px;
-}
-.seg{
-    position:absolute;
-    background:#300;
-}
-.on{
-    background:#f00;
-    box-shadow:0 0 12px #f00;
-}
-.seg.a{ top:0; left:5px; right:5px; height:10px; }
-.seg.d{ top:30px; left:5px; right:5px; height:10px; }
-.seg.g{ bottom:0; left:5px; right:5px; height:10px; }
-.seg.b{ top:5px; right:0; width:10px; height:30px; }
-.seg.c{ bottom:5px; right:0; width:10px; height:30px; }
-.seg.e{ bottom:5px; left:0; width:10px; height:30px; }
-.seg.f{ top:5px; left:0; width:10px; height:30px; }
 
-.separator{
-    color:#f33;
-    font-size:48px;
-    margin:0 12px;
-    text-shadow:0 0 14px #f33;
+.display-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.ms-dot{
-    font-size:38px;
-    margin:0 8px;
-    color:#c00;
+
+.led-display {
+  display: flex;
+  align-items: center;
+  background: #0a0a0a;
+  padding: 20px 30px;
+  border-radius: 16px;
+  border: 2px solid #222;
+  box-shadow: 0 0 60px rgba(255, 0, 0, 0.6), inset 0 0 40px rgba(0, 0, 0, 0.9);
+  overflow: visible;
+  /* CRITICAL: prevent any scaling clipping */
+  transform-origin: center;
+  white-space: nowrap;
+}
+
+/* DIGIT CONTAINER */
+.digit {
+  position: relative;
+  width: 60px;
+  height: 110px;
+  margin: 0 8px;
+  flex-shrink: 0;
+  overflow: visible;
+}
+
+/* ROUNDED LED SEGMENTS */
+.seg {
+  position: absolute;
+  background: #440000;
+  border-radius: 12px;
+  transition: background 0.1s, box-shadow 0.1s;
+}
+.on {
+  background: #ff0000;
+  box-shadow: 0 0 18px #ff0000;
+}
+
+/* segment geometry matching the clock photo */
+.seg.a { top: 0; left: 12px; right: 12px; height: 16px; }
+.seg.d { top: 47px; left: 12px; right: 12px; height: 16px; }
+.seg.g { bottom: 0; left: 12px; right: 12px; height: 16px; }
+
+.seg.b { top: 10px; right: 0; width: 16px; height: 45px; }
+.seg.c { bottom: 10px; right: 0; width: 16px; height: 45px; }
+.seg.e { bottom: 10px; left: 0; width: 16px; height: 45px; }
+.seg.f { top: 10px; left: 0; width: 16px; height: 45px; }
+
+.separator {
+  color: #ff3333;
+  font-size: 90px;
+  margin: 0 20px;
+  text-shadow: 0 0 14px #f33;
+  flex-shrink: 0;
+}
+
+.ms-dot {
+  color: #ff2222;
+  font-size: 60px;
+  margin: 0 15px;
+  flex-shrink: 0;
+}
+
+/* SAFE SCALING: container scales but never clips digits */
+@media (max-width: 900px) {
+  .led-display { transform: scale(0.85); }
+}
+@media (max-width: 700px) {
+  .led-display { transform: scale(0.7); }
+}
+@media (max-width: 500px) {
+  .led-display { transform: scale(0.55); }
 }
 </style>
 </head>
 <body>
 <div class="display-wrapper">
-<div class="led-display" id="display">
+  <div class="led-display" id="display">
     <div class="digit" id="d1"></div>
     <div class="digit" id="d2"></div>
 
@@ -92,87 +122,80 @@ body{
     <div class="digit" id="ms1"></div>
     <div class="digit" id="ms2"></div>
     <div class="digit" id="ms3"></div>
-</div>
+  </div>
 </div>
 
 <script>
-// Segment map
 const map = {
-    '0': ['a','b','c','e','f','g'],
-    '1': ['b','c'],
-    '2': ['a','b','d','e','g'],
-    '3': ['a','b','c','d','g'],
-    '4': ['b','c','f','d'],
-    '5': ['a','c','d','f','g'],
-    '6': ['a','c','d','e','f','g'],
-    '7': ['a','b','c'],
-    '8': ['a','b','c','d','e','f','g'],
-    '9': ['a','b','c','d','f','g']
+  '0': ['a','b','c','e','f','g'],
+  '1': ['b','c'],
+  '2': ['a','b','d','e','g'],
+  '3': ['a','b','c','d','g'],
+  '4': ['b','c','f','d'],
+  '5': ['a','c','d','f','g'],
+  '6': ['a','c','d','e','f','g'],
+  '7': ['a','b','c'],
+  '8': ['a','b','c','d','e','f','g'],
+  '9': ['a','b','c','d','f','g']
 };
 
 function buildDigits(){
-    document.querySelectorAll('.digit').forEach(d=>{
-        ['a','b','c','d','e','f','g'].forEach(s=>{
-            const seg=document.createElement('div');
-            seg.className='seg '+s;
-            d.appendChild(seg);
-        });
+  document.querySelectorAll('.digit').forEach(d=>{
+    ['a','b','c','d','e','f','g'].forEach(s=>{
+      const seg=document.createElement('div');
+      seg.className='seg '+s;
+      d.appendChild(seg);
     });
+  });
 }
 
 function setDigit(id, num){
-    const el = document.getElementById(id);
-    if(!el) return;
-    const segs = el.querySelectorAll('.seg');
-    segs.forEach(s=>s.classList.remove('on'));
-    map[num].forEach(s=>{
-        el.querySelector('.'+s).classList.add('on');
-    });
+  const el = document.getElementById(id);
+  if(!el) return;
+  const segs = el.querySelectorAll('.seg');
+  segs.forEach(s=>s.classList.remove('on'));
+  map[num].forEach(s=>{
+    el.querySelector('.'+s).classList.add('on');
+  });
 }
 
-// countdown target
 const targetDate = new Date();
 targetDate.setMonth(targetDate.getMonth() + 6);
 
 function updateTimer(){
-    const now = Date.now();
-    const diff = targetDate - now;
+  const now = Date.now();
+  const diff = targetDate - now;
+  if(diff <= 0){
+    document.querySelectorAll('.digit').forEach(d=>setDigit(d.id,'8'));
+    return;
+  }
 
-    if(diff <= 0){
-        document.querySelectorAll('.digit').forEach(d=>setDigit(d.id,'8'));
-        return;
-    }
+  const totalSec = Math.floor(diff/1000);
+  const days = Math.floor(totalSec / 86400);
+  const hours = Math.floor((totalSec % 86400)/3600);
+  const minutes = Math.floor((totalSec % 3600)/60);
+  const seconds = totalSec % 60;
+  const ms = diff % 1000;
 
-    const totalSeconds = Math.floor(diff/1000);
-    const days = Math.floor(totalSeconds / 86400);
-    const hours = Math.floor((totalSeconds % 86400)/3600);
-    const minutes = Math.floor((totalSeconds % 3600)/60);
-    const seconds = totalSeconds % 60;
-    const ms = diff % 1000;
+  const pad = (n,l)=>String(n).padStart(l,'0');
 
-    const pad = (n,l)=>String(n).padStart(l,'0');
+  const d = pad(days,2);
+  const h = pad(hours,2);
+  const m = pad(minutes,2);
+  const s = pad(seconds,2);
+  const ms3 = pad(ms,3);
 
-    const d = pad(days,2);
-    const h = pad(hours,2);
-    const m = pad(minutes,2);
-    const s = pad(seconds,2);
-    const ms3 = pad(ms,3);
-
-    setDigit("d1", d[0]);
-    setDigit("d2", d[1]);
-
-    setDigit("h1", h[0]);
-    setDigit("h2", h[1]);
-
-    setDigit("m1", m[0]);
-    setDigit("m2", m[1]);
-
-    setDigit("s1", s[0]);
-    setDigit("s2", s[1]);
-
-    setDigit("ms1", ms3[0]);
-    setDigit("ms2", ms3[1]);
-    setDigit("ms3", ms3[2]);
+  setDigit("d1", d[0]);
+  setDigit("d2", d[1]);
+  setDigit("h1", h[0]);
+  setDigit("h2", h[1]);
+  setDigit("m1", m[0]);
+  setDigit("m2", m[1]);
+  setDigit("s1", s[0]);
+  setDigit("s2", s[1]);
+  setDigit("ms1", ms3[0]);
+  setDigit("ms2", ms3[1]);
+  setDigit("ms3", ms3[2]);
 }
 
 buildDigits();
