--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!-- Updated code with sharp segments but cleaner, more elegant design -->
+<!-- Updated code with thinner, classic LED segments -->
 <!DOCTYPE html>
 <html lang="pl">
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Odliczanie – LED Kanciaste</title>
+<title>Odliczanie – LED Klasyczne</title>
 <style>
 body {
   background: #000;
@@ -28,8 +28,8 @@ body {
   align-items: center;
   background: #0a0a0a;
   padding: 20px 30px;
-  border-radius: 16px;
-  border: 2px solid #222;
+  border-radius: 12px;
+  border: 1px solid #333;
   
   overflow: visible;
   white-space: nowrap;
@@ -38,57 +38,144 @@ body {
 /* DIGIT */
 .digit {
   position: relative;
-  width: 64px;
-  height: 110px;
-  margin: 0 8px;
+  width: 70px;
+  height: 120px;
+  margin: 0 10px;
   flex-shrink: 0;
   overflow: visible;
 }
 
-/* SHARP SEGMENTS - clean and readable */
+/* CLASSIC THIN SEGMENTS - like old digital clock */
 .seg {
   position: absolute;
-  background: #1a0000;
-  border-radius: 2px; /* Minimalne zaokrąglenie */
+  background: #220000;
+  border-radius: 2px;
 }
 
 .on {
   background: #ff0000;
+  box-shadow: 0 0 5px #ff0000;
 }
 
-/* Subtle internal highlight for better readability */
+/* Very subtle inner highlight */
 .on::after {
   content: "";
   position: absolute;
-  inset: 4px;
-  border-radius: 0px;
-  background: rgba(255, 180, 180, 0.15);
   pointer-events: none;
 }
 
-/* HORIZONTAL SEGMENTS */
-.seg.a { top: 0; left: 14px; right: 14px; height: 16px; }
-.seg.d { top: 47px; left: 14px; right: 14px; height: 16px; }
-.seg.g { bottom: 0; left: 14px; right: 14px; height: 16px; }
+/* HORIZONTAL SEGMENTS - thinner */
+.seg.a { 
+  top: 0; 
+  left: 12px; 
+  right: 12px; 
+  height: 12px; 
+  border-radius: 2px 2px 0 0;
+}
+.seg.d { 
+  top: 54px; 
+  left: 12px; 
+  right: 12px; 
+  height: 12px; 
+}
+.seg.g { 
+  bottom: 0; 
+  left: 12px; 
+  right: 12px; 
+  height: 12px; 
+  border-radius: 0 0 2px 2px;
+}
 
-/* VERTICAL SEGMENTS */
-.seg.b { top: 10px; right: 0; width: 16px; height: 47px; }
-.seg.c { bottom: 10px; right: 0; width: 16px; height: 47px; }
-.seg.e { bottom: 10px; left: 0; width: 16px; height: 47px; }
-.seg.f { top: 10px; left: 0; width: 16px; height: 47px; }
+/* VERTICAL SEGMENTS - thinner */
+.seg.b { 
+  top: 6px; 
+  right: 0; 
+  width: 12px; 
+  height: 54px; 
+  border-radius: 0 2px 2px 0;
+}
+.seg.c { 
+  bottom: 6px; 
+  right: 0; 
+  width: 12px; 
+  height: 54px; 
+  border-radius: 0 2px 2px 0;
+}
+.seg.e { 
+  bottom: 6px; 
+  left: 0; 
+  width: 12px; 
+  height: 54px; 
+  border-radius: 2px 0 0 2px;
+}
+.seg.f { 
+  top: 6px; 
+  left: 0; 
+  width: 12px; 
+  height: 54px; 
+  border-radius: 2px 0 0 2px;
+}
+
+/* Inner highlight for horizontal segments */
+.seg.a.on::after {
+  top: 2px;
+  left: 2px;
+  right: 2px;
+  bottom: 1px;
+  background: rgba(255, 180, 180, 0.15);
+  border-radius: 1px;
+}
+.seg.d.on::after {
+  top: 2px;
+  left: 2px;
+  right: 2px;
+  bottom: 2px;
+  background: rgba(255, 180, 180, 0.15);
+  border-radius: 1px;
+}
+.seg.g.on::after {
+  top: 1px;
+  left: 2px;
+  right: 2px;
+  bottom: 2px;
+  background: rgba(255, 180, 180, 0.15);
+  border-radius: 1px;
+}
+
+/* Inner highlight for vertical segments */
+.seg.b.on::after,
+.seg.c.on::after {
+  top: 2px;
+  left: 1px;
+  right: 2px;
+  bottom: 2px;
+  background: rgba(255, 180, 180, 0.15);
+  border-radius: 1px;
+}
+.seg.e.on::after,
+.seg.f.on::after {
+  top: 2px;
+  left: 2px;
+  right: 1px;
+  bottom: 2px;
+  background: rgba(255, 180, 180, 0.15);
+  border-radius: 1px;
+}
 
 .separator {
   color: #ff0000;
-  font-size: 85px;
-  margin: 0 20px;
-  text-shadow: 0 0 4px #f00;
+  font-size: 80px;
+  margin: 0 15px;
+  font-weight: normal;
+  opacity: 0.7;
   flex-shrink: 0;
 }
 
 .ms-dot {
   color: #ff0000;
   font-size: 60px;
-  margin: 0 15px;
+  margin: 0 12px;
+  opacity: 0.7;
   flex-shrink: 0;
 }
 
