--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body {
 
 .on {
   background: #ffffff; /* ZMIENIONE Z #ff0000 NA #ffffff */
-  box-shadow: 0 0 5px #ffffff; /* ZMIENIONE Z #ff0000 NA #ffffff */
+  /* USUNIĘTE CIENIE: box-shadow: 0 0 5px #ffffff; */
 }
 
 /* Very subtle inner highlight */
